--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.3.0",
     "graphql": "^16.5.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "latest",
+    "next-urql": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "urql": "^2.2.2"
   },
   "devDependencies": {
